--- a/src/main/resources/application-siddheswar.properties
+++ b/src/main/resources/application-siddheswar.properties
@@ -1,4 +1,3 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/sih-project
+spring.datasource.url=jdbc:mysql://192.168.1.201:3306/sih-project
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
