--- a/src/main/resources/application-siddheswar.properties
+++ b/src/main/resources/application-siddheswar.properties
@@ -1,3 +1,9 @@
-spring.datasource.url=jdbc:mysql://192.168.1.201:3306/sih-project
+spring.datasource.url=jdbc:mysql://192.168.1.201:3306/sih-project?enabledTLSProtocols=TLSv1.2
 spring.datasource.username=root
 spring.datasource.password=admin
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
