--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.profiles.active = siddheswar
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show_sql=false
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=128MB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
