--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=128MB
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/sih-project
+spring.datasource.username=root
+spring.datasource.password=admin
+
+
+#AWS
+access.key=AKIASJ6TKJZVH2PAEKIH
+secret.key=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
