CI/CD deploy script target file changes

--- a/.aws/buildspec.yml
+++ b/.aws/buildspec.yml
@@ -15,4 +15,4 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/SpringBootSwagger-0.3.jar
+    - target/SIH-Project-0.3.jar
