--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,14 @@ spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 
 server.port=5000
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show_sql=false
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=128MB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+
+#AWS
+access.key=AKIASJ6TKJZVH2PAEKIH
+secret.key=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
