--- a/.aws/buildspec.yml
+++ b/.aws/buildspec.yml
@@ -9,10 +9,11 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn clean install -DskipTests
+      - mvn clean package -DskipTests
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
     - target/SIH-Project-0.3.jar
+  discard-paths: yes
