--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.datasource.password=admin
 #AWS
 access.key=AKIASJ6TKJZVH2PAEKIH
 secret.key=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
+
+#mailing
+spring.mail.from=
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
