--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,11 @@ access.key=AKIASJ6TKJZVH2PAEKIH
 secret.key=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
 
 #mailing
-spring.mail.from=
+spring.mail.from=coderscoders06@gmail.com
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-relay.sendinblue.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=coderscoders06@gmail.com
+spring.mail.password=HOnhgNa6Y5vJT2kr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
